# tedHttpApp

./: CMakeLists.txt  Main.qml  main.cpp
src/: TedManager.cpp  TedManager.h
src/network/: ConnectedDeviceModel.cpp  ConnectedDeviceModel.h  ConnectionManager.cpp  ConnectionManager.h  DeviceModel.cpp  DeviceModel.h  NetworkManager.cpp  NetworkManager.h
src/network/client/: RequestManager.cpp  RequestManager.h  TedClientInterface.cpp  TedClientInterface.h
src/network/client/http/: Request.cpp  Request.h  RequestSendTextToTed.cpp  RequestSendTextToTed.h
src/network/connection/: ConnectedDeviceModel.cpp  ConnectedDeviceModel.h  ConnectionManager.cpp  ConnectionManager.h
src/network/server/: CommandServer.cpp  CommandServer.h
src/utils/: Log.cpp  Log.h
